--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ services:
 
 before_install:
   - docker build -t ksondz/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run -e CI=true ksondz/docker-react npm run test
