--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "arn:aws:s3:::elasticbeanstalk-us-east-2-102833267024"
+  bucket_name: "elasticbeanstalk-us-east-2-102833267024"
+  bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  access_key_id: "$AWS_ACCESS_KEY_VALUE"
+  secret_access_key: "$AWS_SECRET_KEY_VALUE"
 
