--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 deploy:
   edge: true
   provider: elasticbeanstalk
-  region: "us-east-2"
+  region: "eu-west-3"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-east-2-102833267024"
+  bucket_name: "elasticbeanstalk-eu-west-3-102833267024"
   bucket_path: "docker-react"
   on:
     branch: master
